[package]
name = "api"
version = "0.1.0"
authors = ["Resilient08 <58645288+Resilient08@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.15.0"